--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,14 +26,13 @@ jobs:
 
   ci-preview-tests-pre-merge:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
-    needs: deploy-ci-preview
-    runs-on: eks
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: master
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
       - name: Setup tests
         uses: ./.github/actions/tests/setup-python
         env:
