--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -589,22 +589,24 @@ jobs:
           kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
           K8S_SERVER: ${{ secrets.K8S_SERVER }}
           K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
-      - name: Run direct kubectl exec tests against ci-preview
-        uses: ./.github/actions/tests/k8s-direct-tests
-        with:
-          namespace: ci-preview
-          pod: ci-preview-validator-1
-        env:
-          AWS_REGION: "eu-central-1"
-          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
-          AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
-          ECR_REGISTRY_SECRET: ${{ secrets.ECR_REGISTRY_SECRET }}
-          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
-          K8S_SERVER: ${{ secrets.K8S_SERVER }}
-          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
-      - name: Run pytests against ci-preview over kubectl exec
-        uses: ./.github/actions/tests/k8s-e2e-tests
+#      - name: Run direct kubectl exec tests against ci-preview
+#        uses: ./.github/actions/tests/k8s-direct-tests
+#        with:
+#          namespace: ci-preview
+#          pod: ci-preview-validator-1
+#        env:
+#          AWS_REGION: "eu-central-1"
+#          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+#          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+#          AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
+#          ECR_REGISTRY_SECRET: ${{ secrets.ECR_REGISTRY_SECRET }}
+#          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
+#          K8S_SERVER: ${{ secrets.K8S_SERVER }}
+#          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
+      - name: Test against ci-preview
+        uses: ./.github/actions/tests/run-e2e-tests
+#      - name: Run pytests against ci-preview over kubectl exec
+#        uses: ./.github/actions/tests/k8s-e2e-tests
         with:
           env: ci
           decrypt: true
