--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,55 @@ jobs:
 
 ### Pre merge workflow ###############################################################################################################
 
+#  ci-preview-tests-pre-merge:
+#    if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 0
+#          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+#      - name: Setup tests
+#        uses: ./.github/actions/tests/setup-python
+#        env:
+#          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+#          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
+#          K8S_SERVER: ${{ secrets.K8S_SERVER }}
+#          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
+#      - name: Run direct kubectl exec tests against ci-preview
+#        uses: ./.github/actions/tests/k8s-direct-tests
+#        with:
+#          namespace: ci-preview
+#          pod: ci-preview-validator-1
+#        env:
+#          AWS_REGION: "eu-central-1"
+#          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+#          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+#          AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
+#          ECR_REGISTRY_SECRET: ${{ secrets.ECR_REGISTRY_SECRET }}
+#          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
+#          K8S_SERVER: ${{ secrets.K8S_SERVER }}
+#          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
+#      - name: Run pytests against ci-preview over kubectl exec
+#        uses: ./.github/actions/tests/k8s-e2e-tests
+#        with:
+#          env: ci
+#          decrypt: true
+#          blockchain: substrate
+#        env:
+#          USE_KUBECTL_RPC: true
+#          KUBECTL_EXEC_POD: ci-preview-validator-1
+#          K8S_NAMESPACE: ci-preview
+#          AWS_REGION: "eu-central-1"
+#          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+#          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+#          AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
+#          ECR_REGISTRY_SECRET: ${{ secrets.ECR_REGISTRY_SECRET }}
+#          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
+#          K8S_SERVER: ${{ secrets.K8S_SERVER }}
+#          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
+
   build-linux-x86_64-pre-merge:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
@@ -209,6 +258,20 @@ jobs:
           else
             echo "All needed jobs passed."
           fi
+
+#  pre-merge-checks-complete:
+#    if: ${{ always() && github.event_name == 'pull_request' && github.event.pull_request.merged == false }}
+#    needs: [ci-preview-tests-pre-merge]
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Check if any needed job failed
+#        run: |
+#          if [[ "${{ needs.ci-preview-tests-pre-merge.result }}" != "success" ]]; then
+#            echo "One or more needed jobs failed."
+#            exit 1
+#          else
+#            echo "All needed jobs passed."
+#          fi
 
 ### Post merge workflow ###############################################################################################################
 
@@ -526,12 +589,40 @@ jobs:
           kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
           K8S_SERVER: ${{ secrets.K8S_SERVER }}
           K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
+#      - name: Run direct kubectl exec tests against ci-preview
+#        uses: ./.github/actions/tests/k8s-direct-tests
+#        with:
+#          namespace: ci-preview
+#          pod: ci-preview-validator-1
+#        env:
+#          AWS_REGION: "eu-central-1"
+#          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+#          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+#          AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
+#          ECR_REGISTRY_SECRET: ${{ secrets.ECR_REGISTRY_SECRET }}
+#          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
+#          K8S_SERVER: ${{ secrets.K8S_SERVER }}
+#          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
       - name: Test against ci-preview
         uses: ./.github/actions/tests/run-e2e-tests
+#      - name: Run pytests against ci-preview over kubectl exec
+#        uses: ./.github/actions/tests/k8s-e2e-tests
         with:
           env: ci
           decrypt: true
           blockchain: substrate
+#        env:
+#          USE_KUBECTL_RPC: true
+#          KUBECTL_EXEC_POD: ci-preview-validator-1
+#          K8S_NAMESPACE: ci-preview
+#          AWS_REGION: "eu-central-1"
+#          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+#          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+#          AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
+#          ECR_REGISTRY_SECRET: ${{ secrets.ECR_REGISTRY_SECRET }}
+#          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
+#          K8S_SERVER: ${{ secrets.K8S_SERVER }}
+#          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
 
   post-merge-actions-complete:
     if: ${{ always() && (github.event_name == 'pull_request' && github.event.pull_request.merged == true) }}
