--- a/.github/actions/tests/k8s-e2e-tests/action.yml
+++ b/.github/actions/tests/k8s-e2e-tests/action.yml
@@ -91,8 +91,8 @@ runs:
       shell: bash
       run: |
         mkdir -p e2e-tests/secrets/substrate/${{ inputs.env }}
-        cp e2e-tests/secrets/substrate/${{ inputs.env }}/${{ inputs.env }}.json \
-           e2e-tests/secrets/substrate/${{ inputs.env }}/${{ inputs.env }}-ci.json
+        cp e2e-tests/secrets/substrate/${{ inputs.env }}/${{ inputs.env }}-ci.json \
+           e2e-tests/secrets/substrate/${{ inputs.env }}/${{ inputs.env }}.json
 
     - name: Run tests
       id: run-tests
