--- a/toolkit/data-sources/db-sync/Cargo.toml
+++ b/toolkit/data-sources/db-sync/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "db-sync-follower"
+name = "partner-chains-db-sync-data-sources"
 version.workspace = true
 license = "Apache-2.0"
 authors.workspace = true
 edition.workspace = true
 homepage.workspace = true
 repository.workspace = true
+description = "Db-Sync-based implementations of all data sources used by Partner Chains components"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lints]
 workspace = true
 
