--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
 
   ci-preview-tests-pre-merge:
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
-    runs-on: ubuntu-latest
+    runs-on: eks
     steps:
       - name: Checkout
         uses: actions/checkout@v4
