--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,22 +24,22 @@ jobs:
 
 ### Pre merge workflow ###############################################################################################################
 
-  ci-preview-tests-pre-merge:
-    if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
-    runs-on: eks
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
-      - name: Setup tests
-        uses: ./.github/actions/tests/setup-python
-        env:
-          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
-          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
-          K8S_SERVER: ${{ secrets.K8S_SERVER }}
-          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
+#  ci-preview-direct-tests-pre-merge:
+#    if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 0
+#          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+#      - name: Setup tests
+#        uses: ./.github/actions/tests/setup-python
+#        env:
+#          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+#          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
+#          K8S_SERVER: ${{ secrets.K8S_SERVER }}
+#          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
 #      - name: Run direct kubectl exec tests against ci-preview
 #        uses: ./.github/actions/tests/k8s-direct-tests
 #        with:
@@ -54,18 +54,34 @@ jobs:
 #          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
 #          K8S_SERVER: ${{ secrets.K8S_SERVER }}
 #          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
+#  ci-preview-e2e-tests-pre-merge:
+#    if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
+#    runs-on: eks
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 0
+#          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+#      - name: Setup tests
+#        uses: ./.github/actions/tests/setup-python
+#        env:
+#          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+#          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
+#          K8S_SERVER: ${{ secrets.K8S_SERVER }}
+#          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
 #      - name: Run pytests against ci-preview over kubectl exec
 #        uses: ./.github/actions/tests/k8s-e2e-tests
 #        with:
 #          env: ci
 #          decrypt: true
 #          blockchain: substrate
-      - name: Test against ci-preview
-        uses: ./.github/actions/tests/run-e2e-tests
-        with:
-          env: ci
-          decrypt: true
-          blockchain: substrate
+#      - name: Test against ci-preview
+#        uses: ./.github/actions/tests/run-e2e-tests
+#        with:
+#          env: ci
+#          decrypt: true
+#          blockchain: substrate
 
   build-linux-x86_64-pre-merge:
     runs-on: ubuntu-latest
