--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,58 +24,59 @@ jobs:
 
 ### Pre merge workflow ###############################################################################################################
 
-#  ci-preview-direct-tests-pre-merge:
-#    if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v4
-#        with:
-#          fetch-depth: 0
-#          ref: ${{ github.event.pull_request.head.sha || github.sha }}
-#      - name: Setup tests
-#        uses: ./.github/actions/tests/setup-python
-#        env:
-#          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
-#          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
-#          K8S_SERVER: ${{ secrets.K8S_SERVER }}
-#          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
-#      - name: Run direct kubectl exec tests against ci-preview
-#        uses: ./.github/actions/tests/k8s-direct-tests
-#        with:
-#          namespace: ci-preview
-#          pod: ci-preview-validator-1
-#        env:
-#          AWS_REGION: "eu-central-1"
-#          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-#          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
-#          AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
-#          ECR_REGISTRY_SECRET: ${{ secrets.ECR_REGISTRY_SECRET }}
-#          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
-#          K8S_SERVER: ${{ secrets.K8S_SERVER }}
-#          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
-#  ci-preview-e2e-tests-pre-merge:
-#    if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
-#    runs-on: eks
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v4
-#        with:
-#          fetch-depth: 0
-#          ref: ${{ github.event.pull_request.head.sha || github.sha }}
-#      - name: Setup tests
-#        uses: ./.github/actions/tests/setup-python
-#        env:
-#          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
-#          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
-#          K8S_SERVER: ${{ secrets.K8S_SERVER }}
-#          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
-#      - name: Run pytests against ci-preview over kubectl exec
-#        uses: ./.github/actions/tests/k8s-e2e-tests
-#        with:
-#          env: ci
-#          decrypt: true
-#          blockchain: substrate
+  ci-preview-direct-tests-pre-merge:
+    if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+      - name: Setup tests
+        uses: ./.github/actions/tests/setup-python
+        env:
+          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
+          K8S_SERVER: ${{ secrets.K8S_SERVER }}
+          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
+      - name: Run direct kubectl exec tests against ci-preview
+        uses: ./.github/actions/tests/k8s-direct-tests
+        with:
+          namespace: ci-preview
+          pod: ci-preview-validator-1
+        env:
+          AWS_REGION: "eu-central-1"
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+          AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
+          ECR_REGISTRY_SECRET: ${{ secrets.ECR_REGISTRY_SECRET }}
+          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
+          K8S_SERVER: ${{ secrets.K8S_SERVER }}
+          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
+
+  ci-preview-e2e-tests-pre-merge:
+    if: github.event_name == 'pull_request' && github.event.pull_request.merged == false
+    runs-on: eks
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+      - name: Setup tests
+        uses: ./.github/actions/tests/setup-python
+        env:
+          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
+          K8S_SERVER: ${{ secrets.K8S_SERVER }}
+          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
+      - name: Run pytests against ci-preview over kubectl exec
+        uses: ./.github/actions/tests/k8s-e2e-tests
+        with:
+          env: ci
+          decrypt: true
+          blockchain: substrate
 #      - name: Test against ci-preview
 #        uses: ./.github/actions/tests/run-e2e-tests
 #        with:
