--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,18 +71,18 @@ jobs:
           kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
           K8S_SERVER: ${{ secrets.K8S_SERVER }}
           K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
-      - name: Run pytests against ci-preview over kubectl exec
-        uses: ./.github/actions/tests/k8s-e2e-tests
-        with:
-          env: ci
-          decrypt: true
-          blockchain: substrate
-#      - name: Test against ci-preview
-#        uses: ./.github/actions/tests/run-e2e-tests
+#      - name: Run pytests against ci-preview over kubectl exec
+#        uses: ./.github/actions/tests/k8s-e2e-tests
 #        with:
 #          env: ci
 #          decrypt: true
 #          blockchain: substrate
+      - name: Test against ci-preview
+        uses: ./.github/actions/tests/run-e2e-tests
+        with:
+          env: ci
+          decrypt: true
+          blockchain: substrate
 
   build-linux-x86_64-pre-merge:
     runs-on: ubuntu-latest
