--- a/Cargo.toml
+++ b/Cargo.toml
@@ -180,6 +180,7 @@ sqlx = { version = "0.7.4", default-features = false, features = [
     "migrate",
     "bigdecimal",
 ] }
+derive-where = { version = "1.2.7", default-features = false }
 
 # substrate dependencies
 frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2412-1" }
