--- a/toolkit/governed-map/primitives/Cargo.toml
+++ b/toolkit/governed-map/primitives/Cargo.toml
@@ -15,3 +15,25 @@ targets = ["x86_64-unknown-linux-gnu"]
 workspace = true
 
 [dependencies]
+derive-where = { workspace = true }
+parity-scale-codec = { workspace = true }
+scale-info = { workspace = true }
+sidechain-domain = { workspace = true }
+sp-inherents = { workspace = true }
+thiserror = { workspace = true, optional = true }
+serde = { workspace = true, optional = true }
+
+[features]
+default = ["std"]
+std = [
+    "scale-info/std",
+    "sidechain-domain/std",
+    "sp-inherents/std",
+    "thiserror",
+    "serde",
+]
+serde = [
+	"dep:serde",
+	"scale-info/serde",
+	"sidechain-domain/serde",
+]
