fix: image > images

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,8 +137,8 @@ jobs:
         run: |
           # earthly -P +ci-pre-merge --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node --tags="${{ steps.get_sha.outputs.sha }}"
           earthly -P +ci-pre-merge \
-          --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node \
-          --image=ghcr.io/${{ github.repository }}/partner-chains-node-unstable \
+          --image="${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node" \
+          --image="ghcr.io/${{ github.repository }}/partner-chains-node-unstable" \
           --tags="${{ steps.get_sha.outputs.sha }} latest"
       - name: Upload partner-chains-node artifact
         uses: actions/upload-artifact@v4
@@ -348,8 +348,8 @@ jobs:
           EARTHLY_PUSH: true
         run: |
           earthly -P +ci-post-merge \
-          --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node \
-          --image=ghcr.io/${{ github.repository }}/partner-chains-node-unstable \
+          --image="${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node" \
+          --image="ghcr.io/${{ github.repository }}/partner-chains-node-unstable" \
           --tags="${{ steps.get_sha.outputs.sha }} latest"
       - name: Rename artifact
         run: |
@@ -723,7 +723,7 @@ jobs:
           EARTHLY_OUTPUT: true
           EARTHLY_PUSH: true
         run: |
-          earthly -P +ci-workflow-dispatch --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node --tags="${{ inputs.sha }}"
+          earthly -P +ci-workflow-dispatch --image="${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node" --tags="${{ inputs.sha }}"
       - name: Rename artifact
         run: |
           cp ./to-build/partner-chains-node ./to-build/partner-chains-node-${{ inputs.sha }}-x86_64-linux
